@@ -14,7 +14,6 @@ import guess.service.EventService;
 import guess.service.EventTypeService;
 import guess.service.LocaleService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpSession;
@@ -25,7 +24,7 @@ import java.util.stream.Collectors;
 /**
  * Event controller.
  */
-@Controller
+@RestController
 @RequestMapping("/api/event")
 public class EventController {
     private final EventService eventService;
@@ -40,7 +39,6 @@ public class EventController {
     }
 
     @GetMapping("/events")
-    @ResponseBody
     public List<EventBriefDto> getEvents(@RequestParam boolean conferences, @RequestParam boolean meetups,
                                          @RequestParam(required = false) Long organizerId,
                                          @RequestParam(required = false) Long eventTypeId, HttpSession httpSession) {
@@ -53,7 +51,6 @@ public class EventController {
     }
 
     @GetMapping("/default-event")
-    @ResponseBody
     public EventSuperBriefDto getDefaultEvent(HttpSession httpSession) {
         var defaultEvent = eventService.getDefaultEvent(true, true);
         var language = localeService.getLanguage(httpSession);
@@ -62,7 +59,6 @@ public class EventController {
     }
 
     @GetMapping("/default-event-home-info")
-    @ResponseBody
     public EventHomeInfoDto getDefaultEventHomeInfo(HttpSession httpSession) {
         var defaultEvent = eventService.getDefaultEvent(true, true);
         var language = localeService.getLanguage(httpSession);
@@ -71,7 +67,6 @@ public class EventController {
     }
 
     @GetMapping("/default-conference")
-    @ResponseBody
     public EventSuperBriefDto getDefaultConference(HttpSession httpSession) {
         var defaultEvent = eventService.getDefaultEvent(true, false);
         var language = localeService.getLanguage(httpSession);
@@ -80,7 +75,6 @@ public class EventController {
     }
 
     @GetMapping("/event/{id}")
-    @ResponseBody
     public EventDetailsDto getEvent(@PathVariable long id, HttpSession httpSession) {
         var event = eventService.getEventById(id);
         var language = localeService.getLanguage(httpSession);
@@ -88,7 +82,7 @@ public class EventController {
         List<Speaker> speakers = talks.stream()
                 .flatMap(t -> t.getSpeakers().stream())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         var eventDetailsDto = EventDetailsDto.convertToDto(event, speakers, talks, eventService::getEventByTalk,
                 eventTypeService::getEventTypeByEvent, language);
 
